--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -29,3 +29,16 @@ navigation-footer:
     title: "Nectar Series"    
   - url: "/offerings/liberation-through-movement-membership.html"
     title: "Liberation Through Movement Membership"
+navigation-instagram:
+  - url: "/offerings/liberation-through-movement.html"
+    title: "Liberation Through Movement"
+  - url: "/offerings/mana-movement-foundations.html"
+    title: "Mana Movement Foundations"
+  - url: "/offerings/mana-movement.html"
+    title: "Mana Movement"    
+  - url: "/offerings/wisdom-body.html"
+    title: "Wisdom Body"
+  - url: "/offerings/nectar-series.html"
+    title: "Nectar Series"    
+  - url: "/offerings/liberation-through-movement-membership.html"
+    title: "Liberation Through Movement Membership"
