--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -40,3 +40,5 @@ navigation-instagram:
     title: "Nectar Series"    
   - url: "/offerings/liberation-through-movement-membership.html"
     title: "Liberation Through Movement Membership"
+  - url: "/index.html"
+    title: "Website"
