updated the url

--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -15,30 +15,30 @@ navigation:
   - url: "/offerings.html"
     title: "Offerings"
 navigation-footer:
-  - url: "/offerings/liberation-through-movement.html"
+  - url: "/liberation-through-movement.html"
     title: "Liberation Through Movement"
-  - url: "/offerings/mana-movement-foundations.html"
+  - url: "/mana-movement-foundations.html"
     title: "Mana Movement Foundations"
-  - url: "/offerings/mana-movement.html"
+  - url: "/mana-movement.html"
     title: "Mana Movement"    
-  - url: "/offerings/wisdom-body.html"
+  - url: "/wisdom-body.html"
     title: "Wisdom Body"
-  - url: "/offerings/nectar-series.html"
+  - url: "/nectar-series.html"
     title: "Nectar Series"    
-  - url: "/offerings/liberation-through-movement-membership.html"
+  - url: "/liberation-through-movement-membership.html"
     title: "Liberation Through Movement Membership"
 navigation-instagram:
-  - url: "/offerings/liberation-through-movement.html"
+  - url: "/liberation-through-movement.html"
     title: "Liberation Through Movement"
-  - url: "/offerings/mana-movement-foundations.html"
+  - url: "/mana-movement-foundations.html"
     title: "Mana Movement Foundations"
-  - url: "/offerings/mana-movement.html"
+  - url: "/mana-movement.html"
     title: "Mana Movement"    
-  - url: "/offerings/wisdom-body.html"
+  - url: "/wisdom-body.html"
     title: "Wisdom Body"
-  - url: "/offerings/nectar-series.html"
+  - url: "/nectar-series.html"
     title: "Nectar Series"    
-  - url: "/offerings/liberation-through-movement-membership.html"
+  - url: "/liberation-through-movement-membership.html"
     title: "Liberation Through Movement Membership"
   - url: "/index.html"
     title: "Website"
