--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -25,8 +25,8 @@ navigation-footer:
     title: "Wisdom Body"
   - url: "/nectar-series.html"
     title: "Nectar Series"    
-  - url: "/liberation-through-movement-membership.html"
-    title: "Liberation Through Movement Membership"
+  - url: "/liberation-through-movement-mentorship.html"
+    title: "Liberation Through Movement Mentorship"
 navigation-instagram:
   - url: "/liberation-through-movement.html"
     title: "Liberation Through Movement"
@@ -38,7 +38,7 @@ navigation-instagram:
     title: "Wisdom Body"
   - url: "/nectar-series.html"
     title: "Nectar Series"    
-  - url: "/liberation-through-movement-membership.html"
-    title: "Liberation Through Movement Membership"
+  - url: "/liberation-through-movement-mentorship.html"
+    title: "Liberation Through Movement Mentorship"
   - url: "/index.html"
     title: "Website"
