--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -1,9 +1,9 @@
 seo:
   site_name: Mana Mei
-  title: International Feminine Embodiment Leader
-  description: 
-  keywords: 
-  social_image: 
+  title: Mana Mei - Liberation Through Movement Founder, International Feminine Embodiment Leader
+  description: Discover the transformative power of feminine embodiment with Mana Mei. Explore our unique blend of movement, dance, and somatic practices designed to empower women through self-expression and bodily liberation. Join our global community and awaken your inner strength.
+  keywords: Mana Mei, feminine embodiment, liberation through movement, somatic dance, empowerment, self-expression, movement founder, international feminine embodiment leader, feminine power, embodied movement
+  social_image: /uploads/icons/manamei-11.png
   author: Embodied Creative
 social:
   instagram_username: manamei_movement
