--- a/_data/site-settings.yml
+++ b/_data/site-settings.yml
@@ -26,15 +26,21 @@ navigation-footer:
   - url: "/liberation-through-movement-mentorship.html"
     title: "Liberation Through Movement Mentorship"
 navigation-instagram:
-  - url: "/liberation-through-movement.html"
-    title: "Liberation Through Movement"
-  - url: "/mana-movement-foundations.html"
-    title: "Mana Movement Foundations"
-  - url: "/mana-movement.html"
-    title: "Mana Movement"    
-  - url: "/wisdom-body.html"
-    title: "Wisdom Body"    
-  - url: "/liberation-through-movement-mentorship.html"
-    title: "Liberation Through Movement Mentorship"
   - url: "/index.html"
-    title: "Website"
+    title: "Website - All Offerings!"
+  - url: "/wisdom-body.html"
+    title: "Wisdom Body Embodied Movement & Somatic Dance Course - $300"
+  - url: "/offerings.html#cta"
+    title: "Liberation Through Movement Masterclass - FREE"    
+  - url: "/mana-movement-foundations.html"
+    title: "MANA Movement Foundations - $22"    
+  - url: "/mana-movement.html"
+    title: "MANA Movement FULL Course - $180"
+  - url: "/liberation-through-movement-mentorship.html"
+    title: "Liberation Through Movement MENTORSHIP PROGRAM & Facilitator Training"
+  - url: "https://www.facebook.com/groups/liberationthroughmovement/"
+    title: "Liberation Through Movement Community | Facebook"
+  - url: "/liberation-through-movement.html"
+    title: "Liberation Through Movement MEMBERSHIP COMMUNITY"
+  - url: "https://www.youtube.com/@ManaMei"
+    title: "YouTube Channel"
